# axion

./: .gitignore  Cargo.toml
.github/workflows/: rust.yml
axion/: Cargo.toml
axion/src/: contants.rs  lib.rs  prompt.rs
axion/src/command/: add.rs  new.rs
axion/src/scaffold/: mod.rs  scaffolder.rs  steps.rs  template.rs  writer.rs
axion/src/utils/: cargo.rs  docker.rs  helpers.rs  mod.rs
axo_template/: Cargo.toml
axo_template/src/: lib.rs
axo_template/template/src/: create_app.rs.hbs  lib.rs.hbs  main.rs.hbs  state.rs.hbs
axo_template/template/src/api/controller/: todo.rs.hbs
axo_template/template/src/api/dto/: todo.rs.hbs
axo_template/template/src/api/middleware/: service_context.rs.hbs
axo_template/template/src/domain/: error.rs.hbs
axo_template/template/src/domain/models/: service_context.rs.hbs  todo.rs.hbs
axo_template/template/src/domain/repositories/: repository.rs.hbs  todo.rs.hbs
axo_template/template/src/domain/services/: service_context.rs.hbs  todo.rs.hbs
axo_template/template/src/infrastructure/: error.rs.hbs  mod.rs.hbs  schema.rs.hbs
axo_template/template/src/infrastructure/database/: db.rs.hbs
axo_template/template/src/infrastructure/models/: todo.rs.hbs
axo_template/template/src/infrastructure/repositories/: todo.rs.hbs
axo_template/template/src/infrastructure/services/: service_context.rs.hbs
axo_template/template/src/services/: todo.rs.hbs
src/: command.rs  commands.rs  contants.rs  error.rs  find.rs  lib.rs  prompt.rs
src/command/: add.rs  mod.rs  new.rs
src/generator/: project.rs
src/prompt/: create.rs
src/scaffold/: mod.rs  scaffolder.rs  steps.rs  template.rs  writer.rs
src/templates/: Cargo.toml.hbs  engine.rs
src/utils/: cargo.rs  docker.rs  fs.rs  helpers.rs  mod.rs
