[package]
name = "axion"
version = "0.1.0"
edition = "2024"

authors=["Oduwale Awwal harwarl87@gmail.com"]
description = ""
homepage = "https://github.com/harwarl/axion"
license = "MIT"
keywords = ["envrironment", "env", "config", "settings", "dotenv"]
repository = "https://github.com/harwarl/axion"

[lib]
name = "axion"
path = "src/lib.rs"

[[bin]]
name = "axion"
path = "src/bin/axion.rs"
# required-features = ["cli"]

[dependencies]
clap = { version = "4.6.1", optional = true, features = ["derive"]}
inquire = { version = "0.9.4" }
handlebars = { version = "6.4.1" }
fs_extra = { version = "1.3.0" }
colored = { version = "3.1.1" }
indicatif = { version = "0.18.4" }

# [features]
# cli = ["clap"]