[package]
name = "axion"
version = "0.1.0"
edition = "2024"

authors=["Oduwale Awwal harwarl87@gmail.com"]
description = ""
homepage = "https://github.com/harwarl/axion"
license = "MIT"
keywords = ["envrironment", "env", "config", "settings", "dotenv"]
repository = "https://github.com/harwarl/axion"

[lib]
name = "axion"
path = "src/lib.rs"

[[bin]]
name = "axion"
path = "src/bin/axion.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
inquire = { version = "0.9.4" }
handlebars = { version = "6.4.1" }
fs_extra = { version = "1.3.0" }
colored = { version = "3.1.1" }
indicatif = { version = "0.18.4" }
tokio = { version = "1.52.3", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
strum = { version = "0.28.0", features = ["derive"]}
strum_macros = "0.28.0"
thiserror = "2.0.18"

