[package]
name = "axo_template"
version = "0.1.0"
edition = "2024"

authors=["Oduwale Awwal harwarl87@gmail.com"]
description = ""
readme = "../README.md"
homepage = "https://github.com/harwarl/axion"
license = "MIT"
keywords = ["envrironment", "env", "config", "settings", "boilerplate", "project-starter"]
repository = "https://github.com/harwarl/axion"

[lib]
name = "axo_template"
path = "src/lib.rs"

[dependencies]
rust-embed = "8.11.0"
